local/logs/project.log
2019-08-28T02:40:42.863Z - normal: Load ~/.CocosCreator/settings.json
2019-08-28T02:40:44.000Z - normal: Initializing Asset Database
2019-08-28T02:40:44.002Z - normal: checking language setting...
2019-08-28T02:40:44.002Z - normal: Language: en
2019-08-28T02:40:44.510Z - success: preview server running at http://localhost:7456
2019-08-28T02:40:44.512Z - success: protocol editor-framework registered
2019-08-28T02:40:44.512Z - success: protocol app registered
2019-08-28T02:40:44.512Z - success: protocol theme registered
2019-08-28T02:40:44.512Z - success: protocol packages registered
2019-08-28T02:40:44.512Z - success: protocol uuid registerred
2019-08-28T02:40:44.512Z - success: protocol db registerred
2019-08-28T02:40:44.512Z - success: protocol thumbnail registerred
2019-08-28T02:40:44.512Z - success: protocol unpack registerred
2019-08-28T02:40:44.512Z - success: protocol disable-commonjs registerred
2019-08-28T02:40:47.020Z - normal: connected!
2019-08-28T02:40:47.021Z - normal: Check project D:\Taller\tallersoft
2019-08-28T02:40:47.023Z - normal: Initializing project D:\Taller\tallersoft
2019-08-28T02:40:47.325Z - normal: Initializing Cocos2d
2019-08-28T02:40:48.002Z - normal: Initializing engine extends
2019-08-28T02:40:48.016Z - success: asset-db-debugger loaded
2019-08-28T02:40:48.017Z - success: baidu-adapter loaded
2019-08-28T02:40:48.017Z - success: color-picker loaded
2019-08-28T02:40:48.087Z - success: fb-audience-network loaded
2019-08-28T02:40:48.128Z - success: fb-live-stream loaded
2019-08-28T02:40:48.131Z - success: google-play-instant loaded
2019-08-28T02:40:48.134Z - success: huawei-runtime loaded
2019-08-28T02:40:48.322Z - success: cpk-publish loaded
2019-08-28T02:40:48.323Z - success: jsb-adapter loaded
2019-08-28T02:40:48.326Z - success: oppo-runtime loaded
2019-08-28T02:40:48.328Z - success: package-manager loaded
2019-08-28T02:40:48.413Z - success: qqplay-adapter loaded
2019-08-28T02:40:48.414Z - success: runtime-dev-tools loaded
2019-08-28T02:40:48.421Z - success: sdkbox loaded
2019-08-28T02:40:48.423Z - success: tester loaded
2019-08-28T02:40:48.424Z - success: ui-grid loaded
2019-08-28T02:40:48.425Z - success: ui-kit-preview-extra loaded
2019-08-28T02:40:48.426Z - success: ui-kit-preview loaded
2019-08-28T02:40:48.427Z - success: ui-kit loaded
2019-08-28T02:40:48.428Z - success: ui-tree loaded
2019-08-28T02:40:48.431Z - success: vivo-runtime loaded
2019-08-28T02:40:48.432Z - success: weapp-adapter loaded
2019-08-28T02:40:48.432Z - success: xiaomi-adapter loaded
2019-08-28T02:40:48.472Z - success: assets loaded
2019-08-28T02:40:48.473Z - success: builder loaded
2019-08-28T02:40:48.686Z - success: cocos-services loaded
2019-08-28T02:40:48.690Z - success: console loaded
2019-08-28T02:40:48.718Z - success: fb-instant-games loaded
2019-08-28T02:40:48.720Z - success: game-window loaded
2019-08-28T02:40:48.721Z - success: google-instant-games loaded
2019-08-28T02:40:48.723Z - success: hierarchy loaded
2019-08-28T02:40:48.725Z - success: inspector loaded
2019-08-28T02:40:48.725Z - success: keystore loaded
2019-08-28T02:40:48.728Z - success: node-library loaded
2019-08-28T02:40:48.729Z - success: package-asset loaded
2019-08-28T02:40:48.730Z - success: preferences loaded
2019-08-28T02:40:48.730Z - success: project-exporter loaded
2019-08-28T02:40:48.732Z - success: project-importer loaded
2019-08-28T02:40:48.733Z - success: project-settings loaded
2019-08-28T02:40:48.736Z - success: scene loaded
2019-08-28T02:40:48.736Z - success: simulator-debugger loaded
2019-08-28T02:40:48.737Z - success: sprite-editor loaded
2019-08-28T02:40:48.739Z - success: store loaded
2019-08-28T02:40:48.743Z - success: timeline loaded
2019-08-28T02:40:48.745Z - success: xiaomi-runtime loaded
2019-08-28T02:40:53.522Z - failed: [db-task][init] Failed to import asset D:\Taller\tallersoft\assets\Script\Game.js, message: Compile error: SyntaxError: D:/Taller/tallersoft/assets/Script/Game.js: Unexpected token (394:16)
  392 |                     
  393 |                 }
> 394 |                 else{ // flecha apuntando hacia arriba
      |                 ^
  395 |                     var newArrow = cc.instantiate(this.flechaApuntaArribaPrefab);
  396 |                     this.node.addChild(newArrow);
  397 |                     posY = this.arregloSecuenciaCorrecta[0].y-80;
    at Parser.pp$5.raise (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseExprAtom (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3750:12)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
    at Parser.pp$3.parseExpression (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:3306:19)
    at Parser.pp$1.parseStatement (C:\CocosCreator_2.1.2\resources\app.asar\node_modules\babylon\lib\index.js:1906:19)
2019-08-28T02:40:54.044Z - normal: Loading packages
2019-08-28T02:40:54.048Z - normal: Watching packages
2019-08-28T02:40:54.372Z - normal: Run Application
2019-08-28T02:40:55.557Z - info: Cocos Services load base data!
